<resources>
    <string name="app_name">Sportial</string>

    <string name="select_level"> Select Level </string>


    <string-array name="dropbox_sportOptions">
        <item>Please select a sport field you are interested in</item>
        <item>Football</item>
        <item>Basketball</item>
        <item>Soccer</item>
        <item>Tennis</item>
        <item>Golf</item>
        <item>Swimming</item>
        <item>Running</item>
        <item>Cycling</item>
        <item>Climbing</item>
        <item>Yoga</item>
        <item>Pilates</item>
        <item>Zumba</item>
        <item>CrossFit</item>
        <item>Martial arts</item>
        <item>Dance</item>
        <item>Gymnastics</item>
        <item>Track and field</item>
        <item>Volleyball</item>
        <item>Lacrosse</item>
        <item>Rowing</item>
        <item>Sailing</item>
        <item>Surfing</item>
        <item>Skateboarding</item>
        <item>Snowboarding</item>
        <item>Skiing</item>
        <item>Bobsledding</item>
        <item>Luge</item>
        <item>Skeleton</item>
        <item>Curling</item>
        <item>Biathlon</item>
        <item>Triathlon</item>
        <item>Duathlon</item>
        <item>Aquathlon</item>
        <item>Adventure racing</item>
        <item>Obstacle course racing</item>
    </string-array>

    <string-array name="dropbox_genderOptions">
        <item>Please select your gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="dropbox_dayOptions">
        <item>Day</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="dropbox_monthOptions">
        <item>Month</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="dropbox_yearOptions">
        <item>Year</item>
        <item>1900</item>
        <item>1901</item>
        <item>1902</item>
        <item>1903</item>
        <item>1904</item>
        <item>1905</item>
        <item>1906</item>
        <item>1907</item>
        <item>1908</item>
        <item>1909</item>
        <item>1910</item>
        <item>1911</item>
        <item>1912</item>
        <item>1913</item>
        <item>1914</item>
        <item>1915</item>
        <item>1916</item>
        <item>1917</item>
        <item>1918</item>
        <item>1919</item>
        <item>1920</item>
        <item>1921</item>
        <item>1922</item>
        <item>1923</item>
        <item>1924</item>
        <item>1925</item>
        <item>1926</item>
        <item>1927</item>
        <item>1928</item>
        <item>1929</item>
        <item>1930</item>
        <item>1931</item>
        <item>1932</item>
        <item>1933</item>
        <item>1934</item>
        <item>1935</item>
        <item>1936</item>
        <item>1937</item>
        <item>1938</item>
        <item>1939</item>
        <item>1940</item>
        <item>1941</item>
        <item>1942</item>
        <item>1943</item>
        <item>1944</item>
        <item>1945</item>
        <item>1946</item>
        <item>1947</item>
        <item>1948</item>
        <item>1949</item>
        <item>1950</item>
        <item>1951</item>
        <item>1952</item>
        <item>1953</item>
        <item>1954</item>
        <item>1955</item>
        <item>1956</item>
        <item>1957</item>
        <item>1958</item>
        <item>1959</item>
        <item>1960</item>
        <item>1961</item>
        <item>1962</item>
        <item>1963</item>
        <item>1964</item>
        <item>1965</item>
        <item>1966</item>
        <item>1967</item>
        <item>1968</item>
        <item>1969</item>
        <item>1970</item>
        <item>1971</item>
        <item>1972</item>
        <item>1973</item>
        <item>1974</item>
        <item>1975</item>
        <item>1976</item>
        <item>1977</item>
        <item>1978</item>
        <item>1979</item>
        <item>1980</item>
        <item>1981</item>
        <item>1982</item>
        <item>1983</item>
        <item>1984</item>
        <item>1985</item>
        <item>1986</item>
        <item>1987</item>
        <item>1988</item>
        <item>1989</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
    </string-array>


    <string-array name="dropbox_countryOptions">
        <item>Month</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="dropbox_cityOptions">
        <item>Month</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="posts">Posts</string>
    <string name="friends">Friends</string>
    <string name="groups">Groups</string>
    <string name="media">Media</string>
    <string name="bio">Bio</string>
    <string name="user_name">User name</string>
    <string name="full_name">Full Name</string>
    <string name="location">Location</string>
    <string name="send_friend_request">Send friend request</string>
    <string name="request_sent">Request Sent</string>
    <string name="Unfriend" />
    <string name="unfriend">Unfriend</string>
    <string name="back">Back</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="publish_a_new_post">Publish a new Post</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="cancel" />
    <string name="title_activity_maps">MapsActivity</string>
    <string name="sport_name"><![CDATA[<sport_name>]]></string>
    <string name="whats_new_in" />


</resources>