<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">



    <item

        android:id="@+id/nav_posts"
        android:icon="@drawable/ic_post"
        android:title="@string/posts" />
    <item
        android:id="@+id/nav_friends"
        android:icon="@drawable/ic_friends"
        android:title="@string/friends" />
    <item
        android:id="@+id/nav_groups"
        android:icon="@drawable/ic_groups"
        android:title="@string/groups" />

    <item
        android:id="@+id/nav_media"
        android:icon="@drawable/ic_media"
        android:title="@string/media" />

    <item
        android:id="@+id/nav_bio"
        android:icon="@drawable/ic_bio"
        android:title="@string/bio" />


</menu>